Added in the Nickest Names

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
             <h1>Jeff and Vee's Journey with Meyo (Mello)</h1>
             <p></p>
+            <div id= "theNickestNames"> 
             <h2>Nicknames so far</h2>
              <ol>
                  <li>Melo</li>
@@ -17,6 +18,7 @@
                  <li>Meño</li>             
 
              </ol>
+            </div>
             <h2>Origin Story</h2>
             <h2>Accomodations</h2>
             <h2>Friends</h2>
