OrganStory and White text

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             <h1>Jeff and Vee's Journey with Meyo (Mello)</h1>
             <p></p>
             <div id= "theNickestNames"> 
-            <h2>Nicknames so far</h2>
+            <h2>Nicknames so far</h2>   
              <ol>
                  <li>Melo</li>
                  <li>Mello</li>
@@ -19,7 +19,13 @@
 
              </ol>
             </div>
+
+            <div id="OrgansTori">
             <h2>Origin Story</h2>
+            <p>So this is where we picked him up. At Kellyville's Pet shop.</p>
+            <p>At the time, he looked like he was the most chillest bunny in the store. Which is how we was dubbed the name, Mello.</p>
+            </div>
+            <br>
             <h2>Accomodations</h2>
             <h2>Friends</h2>
 
