New Subheadings and h1 updates

--- a/index.html
+++ b/index.html
@@ -25,9 +25,12 @@
             <p>So this is where we picked him up. At Kellyville's Pet shop.</p>
             <p>At the time, he looked like he was the most chillest bunny in the store. Which is how we was dubbed the name, Mello.</p>
             </div>
-            <br>
+        
+            <div id="AwwCmonAsians">
             <h2>Accomodations</h2>
+            </div>
+            <div id="Feerends">
             <h2>Friends</h2>
-
+             </div>
         </body>
 </html>
